# poetry-pyspark-devcontainer

./: .gitignore  .pre-commit-config.yaml  README.md  notebook.ipynb  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  initialize.sh
docs/: Credits.md  DevContainers.md  Getting-started.md
src/poetry_pyspark_devcontainer/: __init__.py  animals.py  spark.py
tests/: conftest.py  test_animals.py
